<resources>
    <string name="app_name">OpenTracks - OSM Dashboard</string>
    <string name="no_data">No track data received</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="MAP_FILE" translatable="false">APP_PREF_MAP_FILE</string>
    <string name="MAP_DIRECTORY" translatable="false">APP_PREF_MAP_DIRECTORY</string>
    <string name="MAP_THEME_DIRECTORY" translatable="false">APP_PREF_MAP_THEME_DIRECTORY</string>
    <string name="MAP_THEME" translatable="false">APP_PREF_MAP_THEME</string>

    <string name="copyright_osm">Map data © OpenStreetMap contributors</string>
    <string name="maps">Maps</string>
    <string name="osm_mapnik">OSM: Mapnik</string>
    <string name="map_themes">Map Themes</string>
    <string name="default_theme">Default Theme</string>
    <string name="map_info_menu">Map Info</string>
    <string name="menu_follow_my_location">Follow my position</string>
    <string name="map_folder">Offline Map Directory</string>
    <string name="theme_folder">Map Theme Directory</string>
    <string name="map_info_text">Use <b><a href="https://f-droid.org/packages/de.dennisguse.opentracks">OpenTracks</a></b>, select a Track and click the map icon to show the track on the map.
        \n\nThe default map is provided by <b><a href="https://openstreetmap.org">OpenStreetMap.org</a></b>.
        \nJoin the community and help to improve the map, see <b><a href="https://www.openstreetmap.org/fixthemap">www.openstreetmap.org/fixthemap</a></b>
        \n\nPlease consider downloading an offline map to decrease the server load and save your mobile data plan.
        \nSome offline maps can be found here:
        \n<b>- <a href="http://download.mapsforge.org/">Mapsforge</a></b>
        \n<b>- <a href="https://www.freizeitkarte-osm.de/android/en/">Freizeitkarte Android</a></b>
        \n<b>- <a href="https://www.openandromaps.org/en">OpenAndroMaps</a></b>
        \n\nSome maps require special themes to render correctly! These need to be downloaded and configured accordingly.
        \n\nTo use offline maps, put them in a folder on your Android device external storage (e.g. <b>/storage/emulated/0</b>, depending on your device) and select the directory in the App menu <b>Maps / Offline Map Directory</b>.
    </string>
    <string name="map_info_title">About Maps</string>
    <string name="app_info_ok">Ok</string>
    <string name="grant_external_storage">You need to grant permission to use the external storage</string>

    <string name="value_unknown" translatable="false">-</string>
    <string name="app_logo_description">App logo</string>
</resources>
